@@ -1,6 +1,6 @@
 /* Headers styles. */
 .msgHeaders {
-    padding: 10px 6px 10px 4px;
+    padding: 10px 6px 6px 4px;
     background-color: #eceff0;
     border-bottom: 1px solid #d0d0d0;
     max-height: 250px;
@@ -25,35 +25,27 @@
 .msgHeaders .subject {
     font-weight: bold;
 }
-#msgHeaderAtc td.label {
-    display: table-cell;
-}
-.atcLabel {
-    font-weight: bold;
-    line-height: 20px;
-    padding-right: 5px;
-}
+#msgloglist,
 #partlist {
-    padding-top: 2px;
+    border-top: 1px solid #d0d0d0;
+    margin-top: 2px;
+    margin-left: 5px;
+    padding: 4px 2px 0;
+}
+#msgloglist,
+#partlist ul {
+    list-style-type: none;
+}
+.partlistDownloadAll {
+    float: right;
+    font-style: italic;
 }
 #partlist .horde-tree-image {
     padding-right: 1px;
 }
-#partlist_toggle span.attachmentImg {
-    margin-right: 0;
-}
-#msgloglist {
-    border-top: 1px solid #d0d0d0;
-    list-style-type: none;
-    margin-top: 2px;
-    margin-left: 5px;
+#msgloglist li,
+#partlist li {
     padding: 2px;
-}
-#msgloglist li {
-    padding: 2px;
-}
-#partlist_toggle {
-    cursor: pointer;
 }
 
 /* Message body formatting. */
